feat: add pgvector-backed sales RAG